@@ -32,6 +32,7 @@
     + XSS - reflected via HTTP_X_FORWARDED_PORT;
     + XSS - Reflected in install scripts;
     + XSS - Unsafe HTML allowed in Request IP Instructions;
+    + XSS - Unsafe HTML allowed in Password vault;
     + Addedd CSRF cookie for clear-changelog and clear-log;
 
 == 1.7.0
